--- a/Paint/ColorBox.xaml
+++ b/Paint/ColorBox.xaml
@@ -16,12 +16,55 @@
                 <Label HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="2">Blue:</Label>
             </StackPanel>
             <StackPanel VerticalAlignment="Center">
-                <TextBox x:Name="Red"   HorizontalAlignment="Right" VerticalAlignment="Top"     Width="100" Margin="5">0</TextBox>
-                <TextBox x:Name="Green" HorizontalAlignment="Right" VerticalAlignment="Center"  Width="100" Margin="5">0</TextBox>
-                <TextBox x:Name="Blue"  HorizontalAlignment="Right" VerticalAlignment="Bottom"  Width="100" Margin="5">0</TextBox>
+                <TextBox x:Name="Red"   HorizontalAlignment="Right" VerticalAlignment="Top"     Width="100" Margin="5" LostFocus="Color_LostFocus">0</TextBox>
+                <TextBox x:Name="Green" HorizontalAlignment="Right" VerticalAlignment="Center"  Width="100" Margin="5" LostFocus="Color_LostFocus">0</TextBox>
+                <TextBox x:Name="Blue"  HorizontalAlignment="Right" VerticalAlignment="Bottom"  Width="100" Margin="5" LostFocus="Color_LostFocus">0</TextBox>
             </StackPanel>
         </WrapPanel>
+        <Grid Margin="10" HorizontalAlignment="Center">
 
-        <Button x:Name="Pick" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10" Width="50" Click="Pick_Click">Pick</Button>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            
+            <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" Width="25" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White" BorderThickness="0" Click="Preset_Click">
+                <Rectangle Stroke="Black" StrokeThickness="1" Width="23" Height="20" Fill="Yellow"></Rectangle>
+            </Button>
+            <Button Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="1" Width="25" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White" BorderThickness="0" Click="Preset_Click">
+                <Rectangle Stroke="Black" StrokeThickness="1" Width="23" Height="20" Fill="Purple"></Rectangle>
+            </Button>
+            <Button Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="1" Width="25" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White" BorderThickness="0" Click="Preset_Click">
+                <Rectangle Stroke="Black" StrokeThickness="1" Width="23" Height="20" Fill="Orange"></Rectangle>
+            </Button>
+            <Button Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="1" Width="25" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White" BorderThickness="0" Click="Preset_Click">
+                <Rectangle Stroke="Black" StrokeThickness="1" Width="23" Height="20" Fill="White"></Rectangle>
+            </Button>
+
+            <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="1" Width="25" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White" BorderThickness="0" Click="Preset_Click">
+                <Rectangle Stroke="Black" StrokeThickness="1" Width="23" Height="20" Fill="Red"></Rectangle>
+            </Button>
+            <Button Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Width="25" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White" BorderThickness="0" Click="Preset_Click">
+                <Rectangle Stroke="Black" StrokeThickness="1" Width="23" Height="20" Fill="Blue"></Rectangle>
+            </Button>
+            <Button Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="1" Width="25" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White" BorderThickness="0" Click="Preset_Click">
+                <Rectangle Stroke="Black" StrokeThickness="1" Width="23" Height="20" Fill="Green"></Rectangle>
+            </Button>
+            <Button Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="1" Width="25" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White" BorderThickness="0" Click="Preset_Click">
+                <Rectangle Stroke="Black" StrokeThickness="1" Width="23" Height="20" Fill="Gray"></Rectangle>
+            </Button>
+
+
+        </Grid>
+        <WrapPanel HorizontalAlignment="Center">
+            <Button HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Width="50" Click="Pick_Click">Pick</Button>
+            <Rectangle x:Name="Preview" StrokeThickness="1" Stroke="Black" Width="25" Margin="10"></Rectangle>
+        </WrapPanel>
     </StackPanel>
 </Window>
